# vagon

./: .gitignore  Alternative.cpp  Alternative.h  CMakeLists.txt  InputData.h  PathData.h  README.md  VAGON_en.md  VAGON_ru.md  VagonCore.cpp  VagonCore.h  main.cpp
